--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -6,6 +6,6 @@
     <img src="../../../assets/images/logo.png" alt="imagen splash">
   </div>
   <div class="splash_spinner">
-    <ion-spinner name="bubbles"></ion-spinner>
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
   </div>
 </ion-content>
