--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Acceso a AsistApp</ion-title>
+    <ion-title>Acceso a RegistrApp</ion-title>
   </ion-toolbar>
 </ion-header>
 
