--- a/src/app/pages/restablecer/restablecer.page.scss
+++ b/src/app/pages/restablecer/restablecer.page.scss
@@ -20,3 +20,9 @@
     margin-top: 50px;         
     text-align: center;
 }
+
+.codigo_boton{
+    display: flex;
+    padding-left: 15px;
+    margin-bottom: 50px;
+}
