--- a/src/app/pages/restablecer/restablecer.page.html
+++ b/src/app/pages/restablecer/restablecer.page.html
@@ -11,20 +11,18 @@
     </div>
     <ion-list>
       <ion-item>
-        <ion-input [(ngModel)]="usuario" label="Nombre de Usuario" label-placement="floating" fill="solid" placeholder="Ingrese nombre de usuario"></ion-input>
+        <ion-input [(ngModel)]="email" label="Correo Electronico" label-placement="floating" fill="solid" placeholder="Ingrese correo Electronico"></ion-input>
       </ion-item>
+      <div class="codigo_boton">
+        <ion-button (click)="enviar_codigo()">
+          Enviar Código
+        </ion-button>
+      </div>
       
-      <ion-item>
-        <ion-input [(ngModel)]="nueva_contrasena" label="Nueva Contraseña" label-placement="floating" fill="outline" type="password" placeholder="Ingrese contraseña"></ion-input>
-      </ion-item>
-      
-      <ion-item>
-        <ion-input [(ngModel)]="nueva_contrasena2" label="Confirme Contraseña" label-placement="floating" fill="outline" type="password" placeholder="Ingrese contraseña"></ion-input>
-      </ion-item>
 
       <div class="ingresar_boton">
         <ion-button (click)="ir_login()">
-          Cambiar Contraseña
+          Volver a Página Principal
         </ion-button>
       </div>
     </ion-list>
