--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -1,9 +1,10 @@
+
 <ion-content >
   <div class="logo_duoc">
     <img src="../../../assets/images/logo_duoc.png" alt="">
   </div>
   <div #image class="splash_imagen">
-    <img src="../../../assets/images/logo.png" alt="imagen splash">
+    <h1>RegistrApp</h1>
   </div>
   <div class="splash_spinner">
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
