--- a/src/app/pages/splash/splash.page.scss
+++ b/src/app/pages/splash/splash.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: #4d4d4de3; /* Reemplaza con el color deseado */
+  --background: #383838e3; /* Reemplaza con el color deseado */
 }
 .logo_duoc {
   display: flex;
@@ -17,11 +17,22 @@ ion-content {
 .splash_imagen {
   display: flex;
   justify-content: center;  /* Centra horizontalmente */
-  margin-top: 20px;         /* Ajusta la separación vertical */
+  margin-top: 200px;         /* Ajusta la separación vertical */
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .splash_spinner {
+  margin-top: 10px;
   width: 50%;
   margin: 0 auto
+}
+.splash_imagen h1 {
+  font-size: 50px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 900;
+  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
+  letter-spacing: 2px; /* Espaciado entre letras */
+  line-height: 1.2; /* Altura de línea */
+  color: rgba(255, 255, 255, 0.9);
 }
